src/objects/Environment_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>BatchSize__c</fullName>
        <label>CustBillCodesBatchSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NewAcctBillingCodeBatchSize__c</fullName>
        <label>NewAcctBillingCodeBatchSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ResultsNotificationEmail__c</fullName>
        <label>ResultsNotificationEmail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Environment Settings</label>
</CustomObject>